# bulletproofs

./: Cargo.toml
benches/: generators.rs  r1cs.rs
src/: errors.rs  generators.rs  inner_product_proof.rs  lib.rs  linear_proof.rs  transcript.rs  util.rs
src/r1cs/: metrics.rs  mod.rs  proof.rs  prover.rs  verifier.rs
src/range_proof/: dealer.rs  messages.rs  mod.rs  party.rs
tests/: r1cs.rs  r1cs_vec.rs  range_proof.rs
