[package]
name = "bulletproofs"
version = "2.0.0"
authors = ["Cathie Yun <cathieyun@gmail.com>", 
           "Henry de Valence <hdevalence@hdevalence.ca>",
           "Oleg Andreev <oleganza@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/dalek-cryptography/bulletproofs"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "ristretto", "zero-knowledge", "bulletproofs"]
description = "A pure-Rust implementation of Bulletproofs using Ristretto"
edition = "2018"

[dependencies]
subtle = { version = "2", default-features = false }
sha3 = { version = "0.9.1", default-features = false }
digest = { version = "0.9.0", default-features = false }
rand = { version = "0.8" }
byteorder = { version = "1", default-features = false }
thiserror = { version = "1", optional = true }
merlin = { version = "2", default-features = false }
ark-ec = { version = "0.4.0"}
ark-ff = { version = "0.4.0"}
ark-serialize = { version = "0.4.0" }
ark-std = { version = "0.4.0" }
rust-crypto = "^0.2"
rayon = {version = "1.5.3", optional = true}
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
criterion = "0.3"
ark-algebra-test-templates = "0.3.0"
ark-secp256r1 = { version = "0.4.0" }
rand_chacha = "0.3.1"
curve25519-dalek = "4.1.2"
hex = "0.4.3"
strobe-rs = { version = "0.8.1" }

[features]
default = ["std", "parallel", "asm"]
std = ["thiserror"]
asm = ["ark-ff/asm"]
parallel = ["ark-ec/parallel", "ark-ff/parallel", "ark-std/parallel", "rayon"]
yoloproofs = ["std"]

[[test]]
name = "range_proof"

[[test]]
name = "r1cs"

[[bench]]
name = "range_proof"
harness = false

[[bench]]
name = "generators"
harness = false

[[bench]]
name = "r1cs"
harness = false

[[bench]]
name = "linear_proof"
harness = false

